--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,47 +1,62 @@
 .weather-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: sans-serif;
-  }
-  
-  .form-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1rem;
-  }
-  
-  .form-container input {
-    padding: 0.5rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-right: 0.5rem;
-  }
-  
-  .form-container button {
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    border: none;
-    background-color: #4BB04F;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .weather-card {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #fff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    padding: 1rem;
-    width: 400px;
-  }
-  
-  .icon-container img {
-    height: 5rem;
-  }
-  
-  .weather-info-container h3 {
-    margin-top: 0
-  }  
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: auto;
+  max-width: 500px;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+input[type="text"] {
+  border: none;
+  border-bottom: 2px solid #333;
+  font-size: 1rem;
+  padding: 0.5rem;
+  width: 60%;
+}
+
+button {
+  background-color: #1E90FF;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 1rem;
+  margin-left: 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.weather-data-container {
+  border: 2px solid #1E90FF;
+  border-radius: 5px;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.temperature-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+
+.weather-description-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+img {
+  height: 50px;
+  margin-left: 1rem;
+}
